2004-05-07  Theodore A. Roth  <troth@openavr.org>

	* AvrCommonLibC.am (nodist_libc_a_SOURCES): Add libm.a sources to
	libc.a so that float point libs are available even if the end user
	forgets to use the -lm to link to the math lib.

2004-05-07  Theodore A. Roth  <troth@openavr.org>

	* AvrCommonLibC.am (nodist_libc_a_SOURCES): Revert addition of libm.a
	C and asm sources. I forget this change was in my tree when I made the
	previous change to this file. Will reapply it separately.

2004-05-07  Theodore A. Roth  <troth@openavr.org>

	* .cvsignore: Update to reflect current reality.
	* common/.cvsignore: New file.
	* doc/examples/.cvsignore: New file.
	* include/.cvsignore: New file.
	* include/avr/.cvsignore: New file.
	* libc/stdio/.cvsignore: New file.

2004-05-07  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* AvrCommonLibC.am (nodist_libc_a_SOURCES): Add stubs to trivialize 
	adding C source files to currently asm only lib source dirs.
	* libc/misc/Files.am (misc_a_c_sources): Define.
	* libc/pmstring/Files.am (pmstring_a_c_sources): Define.
	* libc/string/Files.am (string_a_c_sources): Define.
	* libm/fplib/Files.am (libm_a_c_sources): Define.

2004-05-03  Theodore A. Roth  <troth@openavr.org>

	* devtools/gen-avr-lib-tree.sh: Set CFLAGS for all devices.
	Stub out DEV_DEFS and DEV_ASFLAGS.
	Remove un-needed CONF_FRAG.

2004-05-03  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* devtools/gen-avr-lib-tree.sh: Improve portability by eliminating the
	use of '<<-EOF' and 'mkdir -p'.
	Move all the generated copyright headers into a tmp file so only one
	copy will need to be maintained.

2004-04-30  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* devtools/gen-avr-lib-tree.sh: Use /bin/sh instead of /bin/bash in the
	she-bang.

2004-04-29  Theodore A. Roth  <troth@openavr.org>

	* AvrCommon.am (AVRLIB_CFLAGS): Add -mmcu option.