@@ -28,6 +28,7 @@
 # $Id$
 #
 
+
 AM_CPPFLAGS = -I$(top_srcdir)/common -I$(top_srcdir)/include
 
 AVRLIB_CFLAGS = -g -Wall -W -Wstrict-prototypes -mmcu=$(AVR_TARGET) $(AVR_TARGET_DEFS) $(AVR_TARGET_CFLAGS)
@@ -39,7 +40,7 @@ AM_CCASFLAGS = $(AM_CPPFLAGS) $(AVRLIB_ASFLAGS)
 
 VPATH = $(top_srcdir)/crt1:$(top_srcdir)/libc/stdlib:$(top_srcdir)/libc/pmstring:$(top_srcdir)/libc/string:$(top_srcdir)/libc/misc:$(top_srcdir)/libc/stdio:$(top_srcdir)/libm/fplib
 
-__install_dir = $(prefix)/avr/lib/$(AVR_TARGET)
+__install_dir = $(prefix)/avr/lib/$(AVR_INSTALL_DIR)
 
 avrdir = $(__install_dir)
 avrlibdir = $(__install_dir)
@@ -53,4 +54,3 @@ $(AVR_TARGET_CRT): gcrt1.o
 	rm -f $@
 	ln $< $@ || cp $< $@
 
-# vim: set ft=make ts=4 sw=4:
