@@ -30,6 +30,22 @@
 
 # The Makefile.am fragment is only used by targets that support C programming.
 
+AM_CPPFLAGS = -I$(top_srcdir)/common -I$(top_srcdir)/include
+
+AVRLIB_CFLAGS = -g -Wall -W -Wstrict-prototypes -mmcu=$(AVR_TARGET) $(AVR_TARGET_DEFS) $(AVR_TARGET_CFLAGS)
+
+AVRLIB_ASFLAGS = -x assembler-with-cpp -Wa,-gstabs -mmcu=$(AVR_TARGET) $(AVR_TARGET_DEFS) $(AVR_TARGET_ASFLAGS)
+
+AM_CFLAGS = $(AVRLIB_CFLAGS)
+AM_CCASFLAGS = $(AM_CPPFLAGS) $(AVRLIB_ASFLAGS)
+
+VPATH = $(top_srcdir)/crt1:$(top_srcdir)/libc/stdlib:$(top_srcdir)/libc/pmstring:$(top_srcdir)/libc/string:$(top_srcdir)/libc/misc:$(top_srcdir)/libc/stdio:$(top_srcdir)/libm/fplib
+
+__install_dir = $(prefix)/avr/lib/$(AVR_INSTALL_DIR)
+
+avrdir = $(__install_dir)
+avrlibdir = $(__install_dir)
+
 avr_LIBRARIES = \
 	libc.a \
 	libprintf_min.a \
@@ -66,4 +82,3 @@ nodist_libm_a_SOURCES = \
 libc_a_LIBADD = \
 	$(stdio_a_libadd)
 
-# vim: set ft=make ts=4 sw=4:
